repair block override editor parity